# norway-weather-wall-influxdb

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: factory.py  main.py
app/api/: deps.py  router.py
app/api/routes/: auth.py  measurements.py  weather.py
app/clients/: metno.py
app/core/: config.py  security.py
app/db/: influx.py
app/models/: measurement.py  weather.py
app/repositories/: base.py  flux.py  influx.py  weather.py  weather_influx.py
app/schemas/: auth.py  measurements.py  weather.py
app/services/: measurements.py  weather.py
app/web/: deps.py  router.py  templates.py
app/web/routes/: pages.py
app/web/static/: styles.css  weather_analytics.js  weather_map.js
app/web/templates/: base.html  dashboard.html  login.html  weather.html
scripts/: demo.sh  weather.sh
tests/: conftest.py  fakes.py  test_auth.py  test_measurements.py  test_ui.py  test_weather.py
